[package]
name = "blinky"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.3" }
cortex-m-rt = "0.6.14"
lpc55-rtic = "0.5.7"
cortex-m-semihosting = "0.3.7"
panic-semihosting = { version = "0.5", features = ["jlink-quirks"] }
heapless = "0.7.3"
panic-halt = "0.2.0"
dwt-systick-monotonic = "0.1.0-alpha.3"
lpc55-pac = {version = "0.4.0", features = ["rt"], path = "../lpc55-pac"}
lpc55-hal = {version = "0.3.0", features = ["rtic-peripherals", "rt"], path = "../lpc55-hal"}

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
# opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations

[[bin]]
name = "blinky"
test = false